# inventory-system-public

./: .dockerignore  .editorconfig  .env.development  .env.example  .env.production  .env.test  .gitignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  Dockerfile  Plans.md  README.md  docker-compose.yml  eslint.config.js  lefthook.yml  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.codex/: README.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  lib.rs  main.rs  seed_demo.rs  test_tracing.rs
src-tauri/src/biz/: integrity_service.rs  mod.rs  plu_export_service.rs  product_service.rs  sales_service.rs  stocktake_service.rs
src-tauri/src/biz/csv_import_service/: commit.rs  list.rs  mod.rs  parse.rs  rollback.rs  test_support.rs
src-tauri/src/biz/daily_report_import_service/: commit.rs  list.rs  mod.rs  parse.rs  rollback.rs  tests.rs
src-tauri/src/biz/inventory_service/: common.rs  disposal.rs  invariants.rs  list.rs  manual_sale.rs  mod.rs  receiving.rs  returns.rs  test_support.rs
src-tauri/src/cmd/: csv_import_cmd.rs  daily_report_import_cmd.rs  disposal_cmd.rs  integrity_cmd.rs  inventory_cmd.rs  manual_sale_cmd.rs  mod.rs  plu_export_cmd.rs  product_cmd.rs  receiving_cmd.rs  return_cmd.rs  sales_cmd.rs  settings_cmd.rs  stocktake_cmd.rs
src-tauri/src/db/: disposal_repo.rs  inventory_common.rs  inventory_repo.rs  manual_sale_repo.rs  migration.rs  migration_tx.rs  mod.rs  product_repo.rs  receiving_repo.rs  return_repo.rs  sales_repo.rs  schema_v1.rs  schema_v2.rs  schema_v3.rs  schema_v4.rs  stocktake_repo.rs  system_repo.rs  test_support.rs
src-tauri/src/io/: daily_report_parser.rs  image_manager.rs  mod.rs  plu_formatter.rs  product_csv_importer.rs  report_csv_exporter.rs  z004_parser.rs
src-tauri/src/mnt/: backup.rs  diagnostic_log.rs  log_manager.rs  migration.rs  mod.rs  restore.rs
src-tauri/tests/: architecture_test.rs  design_compliance_test.rs  seed_test.rs
(+781 files in other folders)
